# MycDb

./: .gitignore  CMakeLists.txt  build.py
cmake/: build.cmake  libs.cmake  utils.cmake
cmake/libs/: fmt.cmake  gtest.cmake  krb5.cmake  libssh.cmake  openssl.cmake  zlib.cmake
cmake/utils/: build_funcs.cmake  files_funcs.cmake  strings_funcs.cmake
libsbuilders/: clone_repos.py  copy_to_build_dir.sh  rm_build_dir.sh
resources/: mycdb.conf  querydict.txt
src/libs/: CMakeLists.txt
src/libs/common/: CMakeLists.txt  config.cpp  config.hpp  strings.hpp
src/libs/common/process/: process_executor.h  process_result.h  systemctl_executor.h
src/libs/dbcore/: CMakeLists.txt  core.hpp
src/libs/dbcore/buffer/: buffer.h  buffer_mgr.cpp  buffer_mgr.h
src/libs/dbcore/detail/: check_int_alignment.h
src/libs/dbcore/exceptions/: bad_syntax_exception.h  buffer_abort_exception.h  lock_abort_exception.h  query_constant_variant_exception.h
src/libs/dbcore/file/: file_mgr.cpp  file_mgr.h  secure_file_mgr.h
src/libs/dbcore/file/page/: block_id.h  page.cpp  page.h
src/libs/dbcore/index/: i_index.h  index_type.h
src/libs/dbcore/index/bitmap/: bitmap_index.cpp
src/libs/dbcore/indices/: index_type.h
src/libs/dbcore/log/: log_iterator.h  log_mgr.h
src/libs/dbcore/materialize/: aggregate_fn_factory.cpp  aggregate_fn_factory.h  group_by_plan.h  group_by_scan.h  group_value.h  materialize_plan.h  merge_join_plan.hpp  merge_join_scan.hpp  record_comparator.h  sort_plan.h  sort_scan.h  temp_table.cpp  temp_table.h
src/libs/dbcore/metadata/: constants.h  index_info.h  index_mgr.h  metadata_mgr.h  stat_info.h  stat_mgr.h  table_mgr.h  view_mgr.h
src/libs/dbcore/multibuffer/: buffer_needs.h  chunk_scan.h  multibuffer_product_plan.h  multibuffer_product_scan.h
src/libs/dbcore/parse/: lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  pred_parser.hpp
src/libs/dbcore/query/: constant.h  expression.h  predicate.h  term.h
src/libs/dbcore/record/: layout.h  record_id.h  record_page.h  schema.h  table_scan.cpp  table_scan.h
src/libs/dbcore/scan/: i_scan.h  i_update_scan.h  product_scan.h  project_scan.h  select_scan.h
src/libs/dbcore/tx/: buffer_list.h  isolation_level.h  log_ops.h  transaction.cpp  transaction.h
src/libs/kerberos/: krb5_context_wrapper.h  krb5_wrappers.h  krb_exceptions.h
src/libs/ssh/: CMakeLists.txt  exceptions.h  sessions.h  ssh_client.h
src/server/confeditor/: conf_edtior.h
src/server/core/: exceptions.h
src/server/service/: main.cpp
src/server/service/deploy/: mycdb-server.service.in
(+57 files in other folders)
